--- a/backend/templates/backend/function_list.html
+++ b/backend/templates/backend/function_list.html
@@ -11,18 +11,24 @@
 
 {% if function_list %}
 	<ul>
-	{% for capability in capability_set %}
-
-	{{ capability.name }}
-
-	{% endfor %}
 	{% for function in function_list %}
+	
+	{{ function.capability }}
 
-			<li><a href="/backend/functions/{{ function.id }}/">{{ function.name }}</a> || {{ function.entry_set }} {{ function.role  }}</li>
-		{% endfor %}
+	<li>
+		<a href="/backend/functions/{{ function.id }}/">{{ function.name }}</a> || {{ function.role  }}</li>
+
+	{% for cap in function.capability_set.all %}
+	{{ cap.name }}
+	
+	{% endfor %}
+	{% endfor %}
+	
 	</ul>
 {% else %}
+
 	<p>No functions are available</p>
+
 {% endif %}
 
 {% endblock %}
