--- a/backend/templates/backend/base.html
+++ b/backend/templates/backend/base.html
@@ -20,7 +20,7 @@
 
     <div id="sidebar">
         {% block sidebar %}
-    <nav class="navbar navbar-default navbar-static-top" role="navigation">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
     <ul class="nav navbar-nav">
         <li><a href="#">Home</a></li>
