--- a/backend/templates/backend/role_list.html
+++ b/backend/templates/backend/role_list.html
@@ -8,7 +8,7 @@
 <h3> Roles </h3>
 {% if role_list %}
 
-	<h2>Section 1</h2>
+	<h2>Role list</h2>
 
 		<table class="table table-striped">
 			<thead>
@@ -32,7 +32,7 @@
 		</table>
 		<br>
 
-		<h2>Section 2</h2>
+		<h2>Role list by capability</h2>
 
 		{% for role in role_list %}	
 
@@ -69,7 +69,7 @@
 
 		{% endfor %}
 
-		<h2>Section 3</h2>
+		<h2>Role allocation per function</h2>
 
 		<table class="table table-striped">
 			<thead>
