Added simply 1-step auth module, refactored url and UX flow and added capability box styling

--- a/backend/templates/backend/project_list.html
+++ b/backend/templates/backend/project_list.html
@@ -23,6 +23,7 @@
 				<td>Name</td>
 				<td>Description</td>
 				<td>Status</td>
+				<td>Created by</td>
 			</tr>
 		</thead>
 		<tbody>
@@ -32,6 +33,7 @@
 				<td> <a href="{{ proj.id }}" >{{ proj.proj_name }} </a> </td>
 				<td> {{ proj.description }} </td>
 				<td> {{ proj.status }} </td>
+				<td> {{ proj.created_by }} </td>
 			</tr>
 	
 	{% endfor %}
