--- a/backend/templates/backend/base.html
+++ b/backend/templates/backend/base.html
@@ -23,20 +23,26 @@
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
     <ul class="nav navbar-nav">
-        <li><a href="#">Home</a></li>
+        <li><a href="/backend/projects">Home</a></li>
         <li><a href="#">About</a></li>
+    {% if user.is_authenticated %}
+        <li><a href="#">Welcome {{ user.username|capfirst }} </a></li>
+        <li><a href="{% url 'auth_logout' %}?next=/backend/projects">Logout</a></li>
+    {% else %}
+        <li><a href="{% url 'registration_register' %}">Register</a></li>
+        <li><a href="{% url 'auth_login' %}">Login</a></li>
+    {% endif %}
+
     </uL>
   </div>
 </nav>
         {% endblock %}
     </div>
-<div class="row">
-    <div class="col-md-8">    
-        <div id="content">
-        {% block content %}{% endblock %}
-        </div>
-    </div>
-    <div class="col-md-4"></div>
+
+        {% block content %}
+
+        {% endblock %}
+    
 </div>
 
 
