--- a/backend/templates/backend/function_detail.html
+++ b/backend/templates/backend/function_detail.html
@@ -1,14 +1,45 @@
 
-{% if function_list %}
+{% extends "backend/base.html" %}
 
+{% block content %}
+
+<br><br><br>
 <div class="page-header">
-	  <h1>Functions<small> A list of all functions</small></h1>
+	  <h3>{{ function.name }}</small></h3>
 </div>
-	<ul>
-		{% for function in function_list %}
-			<li><a href="/backend/{{ function.id }}/">{{ function.name }}</a> || {{ function.description }} ||  {{ function.role  }}</li>
+
+{% if function %}
+
+	<table class="table table-striped">
+		<thead>
+			<tr>
+				<td>#</td>
+				<td>Name</td>
+				<td>Description</td>
+				<td>Allocation</td>
+				<td>Created by</td>
+			</tr>
+		</thead>
+	<tbody>
+
+		{% for role in function.roletofunction_set.all %}
+			<tr>
+				<td> {{ role.roletofunction_num }} </td>
+				<td> <a href="{{ role.id }}" >{{ role.role }} </a> </td>
+				<td> {{ role.description }} </td>
+				<td> {{ role.allocation }} </td>
+				<td> {{ role.created_by|capfirst }} </td>
+			</tr>
 		{% endfor %}
-	</ul>
+	</tbody>
+	</table>
+	
+	<br>
+
+<p><a href="{% url 'backend:projects' %} ">Return to project page</a></p>
+
 {% else %}
 	<p>No functions are available</p>
 {% endif %}
+
+{% endblock %}
