--- a/backend/templates/backend/project_detail.html
+++ b/backend/templates/backend/project_detail.html
@@ -6,52 +6,52 @@
 
 {% block content %}
 
-<br><br><br>
+<br>
 <div class="page-header">
-	  <h1>Project<small> A view on the current project</small></h1>
+	  <h3>Capabilities for {{ object.proj_name }}</h3>
 </div>
 
 {% if object %}
-
-<h3>Capabilities for project</h3>
 <p>The following lists the capabilities and their associated functions: </p>
+
 	{% for cap in object.capability_set.all %}
-
-	<h3> {{ cap.name }}<small> - Level {{cap.level }} </small> </h3> 
 	
-		{% if cap.function_set.all %}
+	{% if forloop.first %}<div class="row">{% endif %}
+	<div class="col-xs-4">
 
-	<table class="table table-striped">
-		<thead>
-			<tr>
-				<td>Function</td>
-				<td>Description</td>
-				<td>Status</td>
-				<td>..</td>
-			</tr>
-		</thead>
-		<tbody>
-			
-			<tr>
-			
-			{% for function in cap.function_set.all %} 
-				<td> <a href=" {{ function.id }}"> {{ function.name }} </a> </td>
-				<td> {{ function.description }} </td>
-				<td> {{ function.status }} </td>
-				<td> {{ ..}}</td>
-			</tr>
-			{% endfor %}
-		</tbody>  
-	</table>
-	<a href="/backend/add_capability/">Add new capability</a> <br>
+	<div class="panel panel-default">
+		<div class="panel-heading"> 
+			<h3 class="panel-title">{{ cap.name }}</h3>
+		</div>
+
+	{% if cap.function_set.all %}
+
+	{% for function in cap.function_set.all %} 
+		<div class="panel-body">
+			<a href="functions/{{ function.id }}"> {{ function.name }} </a>
+		</div>
+	{% endfor %}
+	</div>
+
+	<div class="panel-body">
+		<a href="/backend/capabilities/add/">Add new capability</a> <br>
+	</div>
+
 	{% else %}
-		<P>No functions for this capability</P>
-	{% endif %}
 	
+	<div class="panel-body">No functions for this capability</div>
+	</div>
+		<div class="panel-body">
+		<a href="/backend/capabilities/add/">Add new capability</a> <br>
+	</div>
+	{% endif %}
+	</div>
+	 	{% if forloop.counter|divisibleby:3 %}</div><div class="row">{% endif %}
+    	{% if forloop.last %}</div>{% endif %}
 	{% endfor %}
 
 {% else %}
 	<p>No projects are available</p>
 {% endif %}
-
+</div>
 {% endblock %}
