--- a/backend/templates/backend/project_detail.html
+++ b/backend/templates/backend/project_detail.html
@@ -19,7 +19,7 @@
 	{% if forloop.first %}<div class="row">{% endif %}
 	<div class="col-xs-4">
 
-	<div class="panel panel-default">
+	<div class="panel panel-default h">
 		<div class="panel-heading"> 
 			<h3 class="panel-title">{{ cap.name }}</h3>
 		</div>
@@ -36,7 +36,7 @@
 	<div class="panel-body">
 		<a href="/backend/capabilities/add/">Add new capability</a> <br>
 	</div>
-
+	<br>
 	{% else %}
 	
 	<div class="panel-body">No functions for this capability</div>
