--- a/backend/templates/backend/project_list.html
+++ b/backend/templates/backend/project_list.html
@@ -30,7 +30,7 @@
 				{% for proj in proj_list %}
 			<tr>
 				<td> {{ proj.project_num }} </td>
-				<td> <a href="{{ proj.id }}" >{{ proj.proj_name }} </a> </td>
+				<td> <a href="{{ proj.id }}/capabilities" >{{ proj.proj_name }} </a> </td>
 				<td> {{ proj.description }} </td>
 				<td> {{ proj.status }} </td>
 				<td> {{ proj.created_by }} </td>
