--- a/backend/templates/backend/role_list.html
+++ b/backend/templates/backend/role_list.html
@@ -16,7 +16,7 @@
 		<table class="table table-striped">
 			<thead>
 				<tr>
-					<td>Role</td>
+					<td><strong>Role</strong></td>
 					<td>Description</td>
 				</tr>
 			</thead>
