--- a/backend/templates/backend/add_capability.html
+++ b/backend/templates/backend/add_capability.html
@@ -7,7 +7,7 @@
 {% block content %} -->
 	<h3>Add new capability</h3>
 <br><br><br>
-<form id="capability-form" method="post" action="/backend/{{proj}}capabilities/add/">
+<form id="capability-form" method="post" action="{% url 'backend:capability-list' self.proj %}">
 
 	{% csrf_token %}
 	{% for hidden in form.hidden_fields %}
