--- a/backend/templates/backend/project_list.html
+++ b/backend/templates/backend/project_list.html
@@ -30,8 +30,8 @@
 				{% for proj in proj_list %}
 			<tr>
 				<td> {{ proj.project_num }} </td>
-				<td> <a href="{{ proj.id }}/capabilities" >{{ proj.proj_name }} </a> </td>
-				<td> {{ proj.description }} </td>
+				<td><a href="{% url 'backend:capability-list' proj.id %}">{{ proj.proj_name }}</a></td>
+				<td> {{proj.description}}</td>
 				<td> {{ proj.status }} </td>
 				<td> {{ proj.created_by }} </td>
 			</tr>
