--- a/backend/templates/backend/base.html
+++ b/backend/templates/backend/base.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     {% load staticfiles %}
+    
     <title>{% block title %}In Development - TOM{% endblock %}</title>
+    <script src="{% static "js/jquery.js" %}"></script>
+    <script src="{% static "js/scripts.js" %}"></script>
     
     {% load bootstrap3 %}
     {# Load CSS and JavaScript #}
@@ -12,10 +16,8 @@
 
     {# Display django.contrib.messages as Bootstrap alerts #}
     {% bootstrap_messages %}
+    <link rel="stylesheet" type="text/css" href="{% static 'backend/style.css' %}" />
 
-    <script src="{% static "/js/jquery.js" %}"></script>
-    <script src="{% static "/js/backend-ajax.js" %}"></script>
-     <link rel="stylesheet" type="text/css" href="{% static 'backend/style.css' %}" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
